--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "squarecommonblhelper",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "helper for common bl for my projects.",
   "main": "dist/index.js",
   "type": "module",
   "types": "dist/index.d.ts",
   "scripts": {
     "test": "",
-    "build": "rm -rf ./dist && tsc",
+    "prepare": "npm run build",
+    "build": "rimraf /dist && tsc",
     "dev": "tsc && node dist/index.js"
   },
   "files": [
     "dist",
-    "README.md"
+    "README.md",
+    "example.js"
   ],
   "repository": {
     "type": "git",
@@ -25,6 +27,7 @@
   },
   "homepage": "https://github.com/thepmsquare/squareCommonBLHelper#readme",
   "devDependencies": {
+    "rimraf": "^6.0.1",
     "typescript": "^5.3.3"
   },
   "engines": {
